# minishell

./: .gitignore  Makefile  README.md
include/: minishell.h
libft/: Makefile  d_link_list_del.c  d_link_list_del_n.c  d_link_list_get_n.c  d_link_list_insert.c  d_link_list_pop_back.c  d_link_list_pop_front.c  d_link_list_push_back.c  d_link_list_push_front.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  (+18 more)
libft/char/: ft_isascii.c
libft/d_link/: d_link_list_del_n.c  d_link_list_push_back.c
libft/ft_printf/: ft_prf_utils.c
libft/lists/: ft_lstdelone.c
libft/memory/: ft_calloc.c  ft_realloc.c
libft/print/: ft_putchar_fd.c  ft_putchar_nbr.c  ft_putstr_fd.c
libft/string/: ft_dmass_size.c  ft_strdup.c  ft_strjoin.c  ft_strjoinm.c  ft_strlcpy.c  ft_strlen_while.c
minishell/: Dockerfile  Makefile  start.sh
minishell/ms/: .bash_history  .heredoc  Makefile  minishell
oldshell/: .gitignore  CMakeLists.txt  chinaisbetter.txt  main.c  minishell.h  run.sh  test.c
oldshell/cd/: cd.c
oldshell/echo/: echo.c
oldshell/execute/: execute.c
oldshell/exit/: exit.c
oldshell/free/: free.c
oldshell/history/: history.c
oldshell/parser/: parser.c
oldshell/pwd/: CMakeLists.txt
srcs/commands/: cd_second_part.c  exit.c  export_utils.c  pwd.c
(+246 files in other folders)
